# cone-tree

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: c-cpp.yml  release.yml
doc/: CMakeLists.txt
doc/man1/: CMakeLists.txt
pkg/: CMakeLists.txt
pkg/arch/: PKGBUILD
pkg/ubuntu/: CMakeLists.txt
res/: dope_scene.sce  simple_scene.sce
src/: .gitignore  CMakeLists.txt  aabb.hpp  bvh.hpp  camera.cpp  camera.hpp  cb_tree.hpp  cpr_tree.hpp  csr_tree.hpp  hit_record.hpp  hittable.hpp  hittable_bvh.cpp  hittable_bvh.hpp  hittable_list.cpp  hittable_list.hpp  lambertian.hpp  loader.hpp  main.cpp  material.hpp  metal.hpp  print.hpp  ray.hpp  rtweekend.hpp  scene.hpp  sphere.cpp  sphere.hpp  timer.hpp  triangle.h
src/bvh/: aabb.hpp  bvh.hpp
src/cb_tree/: CMakeLists.txt  cb_tree.cpp  cb_tree.hpp  cone.hpp
src/cb_tree/cpr_tree/: CMakeLists.txt  cpr_tree.cpp  cpr_tree.hpp  cpr_tree_active_object.hpp  cpr_tree_batch.hpp
src/cb_tree/csr_tree/: csr_tree.hpp  csr_tree_first_object.hpp  csr_tree_light_source.hpp  csr_tree_second_object.hpp
src/cpr_tree/: cone.hpp  cpr_tree.hpp  cpr_tree_active_object.h  cpr_tree_branch_node.hpp  cpr_tree_node.hpp
src/kd/: kd6.cpp  kd6.hpp
src/material/: lambertian.hpp  material.hpp  metal.hpp
src/math/: aabb.hpp
src/object/: hittable.hpp  sphere.cpp  sphere.hpp  triangle.cpp  triangle.hpp
src/rtx/: camera.cpp  hit_record.hpp  ray.hpp  rtweekend.hpp
src/scene/: scene.hpp  scene_bvh.cpp  scene_bvh.hpp  scene_kd6.cpp  scene_kd6.hpp  scene_list.cpp  scene_list.hpp
